# working_with_databases

./: .gitignore
02/: task_01.sql  task_02.sql
03/: INSERT.sql  SELECT.sql
04/: CMakeLists.txt  main.cpp
05/task_01/: Source.cpp  task_01.sln  task_01.vcxproj
05/task_02/: task_02.cpp  task_02.sln  task_02.vcxproj
